--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,19 @@
 
 @plugin "daisyui";
 
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:wght@300;400;500;600;700&display=swap');
+/* @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:wght@300;400;500;600;700&display=swap"); */
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+/*  */
 
 body {
-  font-family: 'Poppins', sans-serif;
-  color: #333;
+  font-family: "Poppins", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lora', serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Lora", serif;
 }
